fix some spacing and size in issue detail
fixes #365

--- a/src/client/assets/styles/_issues.scss
+++ b/src/client/assets/styles/_issues.scss
@@ -2,3 +2,7 @@
   font-size: 20px;
   padding-right: 5px;
 }
+
+.issues table td {
+  padding: 0px 10px;
+}
